# DBSP_DRP

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  README.md  dbsp_qa.js  docker-compose.test.yml  environment.yml  p200_redux.py  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker.yml  test.yml
dbsp_drp/: adjust_splicing.py  coadding.py  fix_headers.py  fluxing.py  gui_helpers.py  manual_aperture.py  manual_splice.py  manual_tracing.py  p200_arm_redux.py  p200_redux.py  qa.py  quicklook.py  reduction.py  show_spectrum.py  splicing.py  table_edit.py  telluric.py  trim.py
dbsp_drp/data/: dbsp_qa.css  sens_blue_1200_5000_d55.fits  sens_blue_300_3990_d55.fits  sens_blue_600_4000_d55.fits  sens_blue_600_4000_d68.fits  sens_blue_archived.fits  sens_red_1200_7100_d68.fits  sens_red_1200_9400_d55.fits  sens_red_316_7500_d55.fits  sens_red_600_10000_d55.fits  sens_red_archived.fits
dbsp_drp/instruments/: __init__.py  dbsp.py  instrument.py  utils.py
dbsp_drp/tests/: conftest.py  test_coadding.py  test_fluxing.py  test_instruments.py  test_p200_arm_redux.py  test_quicklook.py  test_reduction.py  test_splicing.py  test_table_edit.py
dbsp_drp/tests/files/ql_test_data/: blue0022.fits  blue0031.fits  blue0050.fits  red0022.fits  red0033.fits  red0052.fits
dbsp_drp/tests/files/sample_data/: red0003_arc_no_radec.fits  red0005_flat_no_radec.fits  red0006_flat_yes_radec.fits  red0007_science.fits
dbsp_drp/tests/files/table_edit_test_data/: red0001_bias_no_radec.fits
docs/: conf.py  index.rst  requirements.txt
docs/source/: adjust_splicing.rst  community.rst  conf.py  dbsp_drp.rst  dbsp_drp.tests.rst  docker.rst  index.rst  installing.rst  manual_extraction.rst  modules.rst  outputs.rst  qa.rst  quicklook.rst  trim.rst  usage.rst  viewing.rst
paper/: paper.bib  paper.md
