[metadata]
name = DBSP_DRP
description = "Data Reduction Pipeline for Palomar's Double Spectrograph"
long_description = file: README.md
author = Milan S. Roberson
author_email = mroberso@caltech.edu
license = BSD-3
license_file = LICENSE
url = https://github.com/finagle29/DBSP_DRP
github_project = finagle29/DBSP_DRP

[options]
zip_safe = False
use_2_to_3 = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
include_package_data = True
install_requires=
    numpy
    astropy
    scipy
    matplotlib
    configobj
    packaging
    pytest
    yattag
    pypeit
    tqdm
scripts=
    bin/dbsp_reduce
    bin/dbsp_ql
    bin/dbsp_show
    bin/dbsp_adjust_splicing

[options.package_data]
* = data/*

[tool:pytest]
testpaths = "dbsp_drp/tests"
