[metadata]
name = DBSP_DRP
description = "Automated Data Reduction Pipeline for Palomar's Double Spectrograph"
long_description = file: README.md
long_description_content_type = text/markdown
author = Milan Sharma Mandigo-Stoba
author_email = finagle29@gmail.com
license = BSD-3
license_file = LICENSE
url = https://github.com/finagle29/DBSP_DRP
github_project = finagle29/DBSP_DRP

[options]
zip_safe = False
use_2_to_3 = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
include_package_data = True
install_requires=
    numpy
    astropy
    scipy
    matplotlib
    configobj
    packaging
    pytest
    yattag
    pypeit
    tqdm

[options.package_data]
* = data/*

[options.entry_points]
console_scripts =
    dbsp_reduce = dbsp_drp.p200_redux:entrypoint
    dbsp_ql = dbsp_drp.quicklook:entrypoint
    dbsp_show = dbsp_drp.show_spectrum:entrypoint
    dbsp_adjust_splicing = dbsp_drp.adjust_splicing:entrypoint
    dbsp_splice = dbsp_drp.manual_splice:entrypoint
    dbsp_trim = dbsp_drp.trim:entrypoint
